# messaging-service

./: .dockerignore  .gitignore  CMakeLists.txt  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  make.bat
init.sql/: 01-init.sql
src/: conversation_handler.cpp  main.cpp  message_handler.cpp  server.cpp  server.h  webhook_handler.cpp  webhook_handler.h
src/database/: database.cpp  database.h
src/handlers/: conversation_handler.cpp  conversation_handler.h  message_handler.cpp  message_handler.h  webhook_handler.cpp  webhook_handler.h
src/providers/: messaging_provider.cpp  messaging_provider.h
src/providers/implementations/: DefaultMessagingProvider.cpp  DefaultMessagingProvider.h
src/server/: server.cpp  server.h
src/types/: status_codes.h
src/utils/: json_parser.cpp  json_parser.h  message_scheduler.cpp  message_scheduler.h  worker_pool.cpp  worker_pool.h
tests/: README.md  test_framework.h  test_json_parser.cpp  test_runner.cpp
